--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Beetroot2020</title>
 
 <body>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt laboriosam accusamus unde ut vel voluptatem quia ea
+    <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
+    Sunt laboriosam accusamus unde ut vel
+    voluptatem quia ea
     temporibus est deserunt eligendi earum, numquam ratione qui, exercitationem ab a id excepturi.
 
 </body>
