--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Beetroot2020</title>
 
 <body>
-    <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
-    Sunt laboriosam accusamus unde ut vel
-    voluptatem quia ea
+    <ul>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Sunt laboriosam accusamus unde ut vel
+            voluptatem quia ea</li>
 
-    temporibus est deserunt eligendi earum, numquam ratione qui, exercitationem ab a id excepturi.
+        <li>temporibus est deserunt eligendi earum, numquam ratione qui, exercitationem ab a id excepturi.</li>
+    </ul>
 
 </body>
 
